# tlaplus-process-studio

./: .gitignore  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  Trunk.toml  compose.yaml  index.html  robots.txt  run.sh  sitemap.xml  style.css
.github/skills/tla-studio-agent/: SKILL.md
.github/workflows/: deploy.yml
branding/: generate.js  og-image.html
fixtures/examples/: hiring-pipeline.tla  innovation-adoption.tla  meeting-lifecycle.tla  mlops-lifecycle.tla  qrspi-workflow.tla  team-delivery.tla
src/: layout.rs  main.rs  model.rs  parser.rs
