[package]
name = "tla-wasm-mvp"
version = "1.2.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
regex = "1"
once_cell = "1"
petgraph = "0.8"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Clipboard", "Document", "DomRect", "Element", "History", "HtmlInputElement", "HtmlTextAreaElement", "Location", "Navigator", "Window", "Storage"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

